update second plot description

--- a/p8105_hw1_jr3869.md
+++ b/p8105_hw1_jr3869.md
@@ -152,6 +152,6 @@ ggplot(plot_df, aes(x = x, y = y, color=vec_factor)) + geom_point()
 
 ![](p8105_hw1_jr3869_files/figure-markdown_github/plot2-2.png)
 
--   In the second plot, the color scale uses a gradident, color changes from bright blue to dark blue. Because there are only two different values in vec\_numeric, only two colors are shown on the plot.
+-   In the second plot, the color scale uses a gradident. Color changes from bright blue to dark blue. Because there are only two different values in vec\_numeric, only two colors are shown on the plot.
 
 -   In the third plot, x+y &gt;0 is showing in blue and x+y &lt;=0 is showing in red. Only two colors are in the color scale.
