--- a/p8105_hw1_jr3869.Rmd
+++ b/p8105_hw1_jr3869.Rmd
@@ -117,6 +117,6 @@ ggplot(plot_df, aes(x = x, y = y, color=vec_numeric)) + geom_point()
 ggplot(plot_df, aes(x = x, y = y, color=vec_factor)) + geom_point()
 ```
 
-* In the second plot, the color scale uses a gradident, color changes from bright blue to dark blue. Because there are only two different values in  vec_numeric, only two colors are shown on the plot.
+* In the second plot, the color scale uses a gradident. Color changes from bright blue to dark blue. Because there are only two different values in  vec_numeric, only two colors are shown on the plot.
 
 * In the third plot, x+y >0 is showing in blue and x+y <=0 is showing in red. Only two colors are in the color scale. 
