change in plot comments

--- a/p8105_hw1_jr3869.md
+++ b/p8105_hw1_jr3869.md
@@ -12,14 +12,14 @@ A random sample of size 10 from a uniform\[0, 5\] distribution A logical vector 
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ──────────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ───────────────────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
     ## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
     ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
     ## ✔ readr   1.1.1     ✔ forcats 0.3.0
 
-    ## ── Conflicts ─────────────────────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ──────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
@@ -78,7 +78,9 @@ as.numeric(vec_df$vec_char)
 as.numeric(vec_df$vec_factor)
 ```
 
-*Logical vector converts to 0 and 1. *Character vector gives warning:NAs introduced by coercion. \*Factor vecter returns numeric numbers, which is based on the alphabetical orders in the sequence.
+-   Logical vector converts to 0 and 1.
+-   Character vector gives warning:NAs introduced by coercion.
+-   Factor vecter returns numeric numbers, which is based on the alphabetical orders in the sequence.
 
 -   In a second code chunk, convert your character variable from character to factor to numeric. similarly, convert your factor variable from factor to character to numeric.
 
@@ -89,7 +91,8 @@ as.numeric(as.factor(vec_df$vec_char))
 as.numeric(as.character(vec_df$vec_factor))
 ```
 
-*Converting character variable from character to factor to numeric returns a vector of numeric numbers. *Converting factor variable from factor to character to numeric returns Warning: NAs introduced by coercion.
+-   Converting character variable from character to factor to numeric returns a vector of numeric numbers.
+-   Converting factor variable from factor to character to numeric returns Warning: NAs introduced by coercion.
 
 problem 2
 =========
@@ -134,7 +137,7 @@ ggsave("scatter_plot1.pdf")
 
     ## Saving 7 x 5 in image
 
--   In this case, x+y &gt;0 is showing in blue and x+y &lt;=0 is showing in red. Only two colors are in the color scale.
+-   In this case, blue points indicate TRUE and red points indicate FALSE. Only two colors are in the color scale.
 
 -   Make a second and third scatterplot that color points using the numeric and factor variables
 
@@ -154,4 +157,4 @@ ggplot(plot_df, aes(x = x, y = y, color=vec_factor)) + geom_point()
 
 -   In the second plot, the color scale uses a gradident. Color changes from bright blue to dark blue. Because there are only two different values in vec\_numeric, only two colors are shown on the plot.
 
--   In the third plot, x+y &gt;0 is showing in blue and x+y &lt;=0 is showing in red. Only two colors are in the color scale.
+-   In the third plot, only two discrete colors are in the color scale. Blue points indicate TRUE and red points indicate FALSE.
