--- a/p8105_hw1_jr3869.md
+++ b/p8105_hw1_jr3869.md
@@ -157,4 +157,4 @@ ggplot(plot_df, aes(x = x, y = y, color=vec_factor)) + geom_point()
 
 -   In the second plot, the color scale uses a gradident. Color changes from bright blue to dark blue. Because there are only two different values in vec\_numeric, only two colors are shown on the plot.
 
--   In the third plot, only two discrete colors are in the color scale. Blue points indicate TRUE and red points indicate FALSE.
+-   In the third plot, only two discrete colors are in the color scale. Blue points indicate TRUE and red points indicate FALSE.Factor variable is created by coercing the logical vector in this ccase.
